--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/enyasantiago/Employee-Tracker/issues"
   },
-  "homepage": "https://github.com/enyasantiago/Employee-Tracker#readme"
+  "homepage": "https://github.com/enyasantiago/Employee-Tracker#readme",
+  "dependencies": {
+    "console.log": "^0.1.3",
+    "console.table": "^0.10.0",
+    "inquirer": "^8.0.0",
+    "mysql": "^2.18.1"
+  }
 }
